Fixed Layout Issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,9 +42,7 @@
     position: relative;
     right: 0;
     top: 0;
-    width: 100%;
     background-color: #F9F9F9;
-    border-left: 1px solid #c7c7c7;
     z-index: 1000;
     padding: 10px;
     display: flex;
